<resources>

    <string name="app_name">PocketDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="OK">OK</string>
    <string name="Empty"></string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="About">About Us</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ip">Enter Server IP Address</string>
    <string name="pass">Enter Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_key_board">KeyBoardActivity</string>
    <string name="CommandList">Command List</string>
    <string name="addCmd">Add Command</string>
    <string name="Press">Press</string>
    <string name="CmdName">Command Name</string>
    <string name="Save">Save</string>
    <string name="Close">Close</string>
    <string name="Propogate">Propogate Command</string>
    <string name="EnterText">Enter Text</string>
    <string name="tempip">192.168.0.100</string>
    <string name="title_activity_add_shortcut">AddShortcutActivity</string>
    <string name="SKTName">Shortcut Name</string>
    <string name="SKTPath">Path</string>
    <string name="title_activity_shortcut">ShortcutActivity</string>
    <string name="sktList">Shoutcut List</string>

</resources>