<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/SKTName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSktName"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10" >

        <requestFocus />
    </EditText>

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="275dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/SKTPath"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/etSktPath"
	    android:layout_width="275dp"
	    android:layout_height="100dp"
	    android:layout_gravity="center"
	    android:ems="10"
	    android:inputType="textMultiLine" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/Empty" />

	<Button
	    android:id="@+id/btnSktSave"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="132dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/Save" />
    
</LinearLayout>
