<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="488dp"
            android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/ip"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <EditText
		        android:id="@+id/etEnterIP"
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:ems="10"
		        android:text="@string/tempip" >
		
		        <requestFocus />
		    </EditText>

		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		        
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:orientation="horizontal" >
		        	
		            <TextView
		                android:id="@+id/tv00"
		                android:layout_width="38dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="00"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
		                android:id="@+id/tv01"
		                android:layout_width="38dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="01"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv02"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="02"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv03"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="03"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv04"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="04"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv05"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="05"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		    	</LinearLayout>
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:orientation="horizontal" >
		        	
		            <TextView
		                android:id="@+id/tv10"
		                android:layout_width="38dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="10"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv11"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="11"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv12"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="12"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv13"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="13"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv14"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="14"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv15"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="15"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		    	</LinearLayout>
		    	
		        
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:orientation="horizontal" >
		        	
		            <TextView
		                android:id="@+id/tv20"
		                android:layout_width="38dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="20"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv21"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="21"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv22"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="22"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv23"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="23"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv24"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="24"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv25"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="25"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		    	</LinearLayout>
		    	
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:orientation="horizontal" >
		        	
		            <TextView
		                android:id="@+id/tv30"
		                android:layout_width="38dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="30"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv31"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="31"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv32"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="32"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv33"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="33"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv34"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="34"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv35"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="35"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		    	</LinearLayout>
		        
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:orientation="horizontal" >
		        	
		            <TextView
		                android:id="@+id/tv40"
		                android:layout_width="38dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="40"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv41"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="41"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv42"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="42"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv43"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="43"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv44"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="44"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv45"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="45"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		    	</LinearLayout>
		        
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:orientation="horizontal" >
		        	
		            <TextView
		                android:id="@+id/tv50"
		                android:layout_width="38dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center"
		                android:text="50"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv51"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="51"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv52"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="52"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv53"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="53"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv54"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="54"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		            
		            <TextView
				        android:id="@+id/tv55"
				        android:layout_width="38dp"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center"
				        android:gravity="center"
				        android:text="55"
				        android:textAppearance="?android:attr/textAppearanceLarge" />
		    	</LinearLayout>
		        
		    </LinearLayout>
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/Empty"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/Empty"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/pass"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <EditText
		        android:id="@+id/etEnterPass"
		        android:layout_width="250dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:ems="10" >
		    </EditText>
		    
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/Empty"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <LinearLayout
		        android:layout_width="212dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:orientation="horizontal" >

		        <Button
			        android:id="@+id/BtnLoginOK"
			        style="?android:attr/buttonStyleSmall"
			        android:layout_width="106dp"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:text="@string/OK" />
		        
		        <Button
			        android:id="@+id/BtnLoginClear"
			        style="?android:attr/buttonStyleSmall"
			        android:layout_width="106dp"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:text="Clear" />
		        
		    </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

		    
    
</LinearLayout>
